--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@developerso/shadowizard",
   "version": "1.0.0",
   "description": "This module gives smooth shadow everytime for non-developers",
-  "main": "index.js",
+  "main": "shadowizard/packages/nodejs/index.js",
   "scripts": {
     "test": "node test.js"
   },
