--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Shadowizard Doc
 description: Gives your website a perfect shadow
 show_downloads: true
-google_analytics:
+google_analytics:G-MPQJT9D7F8
 theme: jekyll-theme-hacker
