--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@developerso/shadowizard",
+  "name": "@developerso/shadowizards",
   "version": "1.0.0",
   "description": "This module gives smooth shadow everytime for non-developers",
   "main": "index.js",
